add client sdk to consume from mock server
